Minor issue with left align when zooming in

--- a/src/App.scss
+++ b/src/App.scss
@@ -107,7 +107,9 @@ $bgcolorEven: #303030;
 }
 
 #mapContainer {
-  width: 90vw;
+  width: 100vw;
+  margin: auto;
+  display: block;
 }
 
 #map {
